--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+*{
+	margin: 0;
+	padding: 0;
+}
 html{
   margin: 0;
   scroll-behavior: smooth;
@@ -17,6 +21,7 @@ a{
 
 #navB{
   display: flex;
+  padding: 1em;
 }
 
 #ham{
@@ -152,5 +157,17 @@ a{
   .banner-para{
     font-size: 0.9rem;
     margin-top: 0;
+  }
+}
+
+@media (max-width:400px) {
+  .banner-para{
+    padding: 0 1.5em;
+  }
+}
+
+@media (max-width:388px) {
+  .banner-para{
+    padding: 0 2.5em;
   }
 }
